fixed projects from overflowing

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -19,7 +19,7 @@ body {
 main {
   display: grid;
   grid-template-rows: 15% 85%;
-  height: 100vh;
+  height: 100%;
   margin-left: 190px;
   transition: margin-left 0.5s ease;
 }
@@ -59,6 +59,7 @@ main {
   height: 100%;
   width: 190px;
   transition: width 0.5s ease;
+  overflow: sc;
 }
 
 .sidebar .options {
@@ -86,20 +87,23 @@ main {
   cursor: pointer;
 }
 
-.sidebar .projects {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+.projects {
+  list-style: none;
   padding: 0;
 }
 
-.sidebar .projects li {
-  gap: 20px;
-  color: white;
-  font-weight: 400;
-  padding: 10px;
+.projects-container {
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(20px, 1fr));
+  max-height: 400px;
+}
+
+.projects li {
   text-align: center;
+  padding: 15px;
   cursor: pointer;
+  color: white;
+  font-weight: 500;
 }
 
 .project-form-container {
@@ -145,7 +149,7 @@ main {
 }
 
 .active-project {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.1);
   height: 20px;
 }
 
